--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,35 @@
 /* You can add global styles to this file, and also import other style files */
+
+/*
+SPACING SYSTEM (px)
+2 / 4 / 8 / 12 / 16 / 24 / 32 / 48 / 64 / 80 / 96 / 128
+
+FONT SIZE SYSTEM (px)
+10 / 12 / 14 / 16 / 18 / 20 / 24 / 30 / 36 / 44 / 52 / 62 / 74 / 86 / 98
+*/
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+  
+  /* ------------------------ */
+  /* GENERAL STYLES */
+  /* ------------------------ */
+
+@font-face {
+    font-family: 'firago';
+    src: url('./assets/FiraGO-Regular.ttf');
+}
+html {
+    font-size: 62.5%;
+}
+
+body {
+    font-family: 'firago', sans-serif ;
+
+}
+
+
+
