--- a/src/app/topics/topic-list/topic-list.component.css
+++ b/src/app/topics/topic-list/topic-list.component.css
@@ -1,12 +1,15 @@
-
 .topic-list {
-    width: 80rem;
-    display: grid;
-    grid-template-columns: repeat(6,1fr);
-    margin: 0 auto;
-    gap: 3rem;
-    /* height: 12.8rem; */
-    /* overflow-y: scroll; */
-    
+    width: 100%;
+    overflow-x: auto;
     margin-top: 9.6rem;
+}
+
+.topic-list-inner {
+    width: 50%;
+    display: flex;
+    gap: 3rem;
+    padding-left: 12rem;
+    padding-right: 12rem;
+    /* margin: 0 auto; */
+
 }
