--- a/src/app/topics/topic-list/topic-list.component.html
+++ b/src/app/topics/topic-list/topic-list.component.html
@@ -1,6 +1,6 @@
-
 <div class="topic-list">
-    <app-topic-card 
-        *ngFor="let topic of topicService.currentTopics$ | async" [topic]="topic">
-    </app-topic-card>
+    <div class="topic-list-inner">
+        <app-topic-card *ngFor="let topic of topicService.currentTopics$ | async" [topic]="topic">
+        </app-topic-card>
+    </div>
 </div>
