refactored to components and added modal validations

--- a/src/app/hero/hero.component.html
+++ b/src/app/hero/hero.component.html
@@ -1,6 +1,8 @@
 <div class="hero">
     <div class="hero-heading-wrapper">
-        <h1 class="hero-heading">ბლოგი</h1>
+        <app-heading 
+            [headingText]="'ბლოგი'"
+            [headingStyle]="'heading-lg'"></app-heading>
     </div>
     <div class="hero-img-wrapper">
         <img src="../../assets/Blog-1024x355 1.png" alt="blog logo" />
