--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,6 +1,7 @@
 <nav class="navbar">
     <div>
-        <img src="../../assets/LOGO-02 3.png" alt="logo"/>
+
+        <img [routerLink]="'/'" src="../../assets/LOGO-02 3.png" alt="logo"/>
     </div>
     <div>
         <div>
