--- a/src/app/add-blog/add-blog.component.css
+++ b/src/app/add-blog/add-blog.component.css
@@ -1,9 +1,184 @@
 
+:host {
+    
+    position: relative;
+}
 
 .add-blog {
+    margin-top: 3rem;
+    width: 78rem;
+    /* border: 1px solid salmon; */
+    margin-left: auto;
+    margin-right: auto;
+    padding: 1.2rem;
+    
+}
+
+
+.arrow-left {
+    position: absolute;
+    top: 2%;
+    left: 10%;
+}
+
+.arr {
+    position: relative;
+    background-color: rgb(218, 218, 218);
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+}
+
+.arr div {
+    position: absolute;
+    height: 20px;
+    width: 20px;
+    border-top: 4px solid #202020;
+    border-left: 4px solid #202020;
+    transform: rotate(45deg);
+    left: 13.75px;
+    top: 17.5px;
+}
+
+.left {
+    transform: rotate(-90deg);
+}
+
+
+.add-blog-form {
+    margin-top: 4.8rem;
+}
+
+.authro-and-title-wrapper, .description-wrapper, .pubDate-and-categories {
+    margin-top: 3rem;
+
+} 
+
+
+.authro-and-title-wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+
+
+.pubDate-and-categories {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+}
+
+
+.blog-submit-btn-left {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.blog-img-upload-wrapper {
+    position: relative;
+}
+
+.uploaded-file, .img-and-imgName  {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.uploaded-file span {
+    font-size: 2rem;
+    cursor: pointer;
+}
+.img-and-imgName {
+    gap: 2rem;
+}
+
+.dummy-img {
+    width: 4rem;
+    height: 4rem;
+}
+
+.img-and-imgName span {
+    font-size: 1.4rem;
+}
+
+.file-input-label {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-top: 16rem;
+    height: 24rem;
+    width: 100%;
+    border-radius: 6px;
+    border: 1px dashed rebeccapurple;
+    cursor: pointer;
+
 }
 
+/* upload image styles */
+
+.upload-photo-title {
+    font-size: 1.6rem;
+    font-weight: 500;
+    font-family: 'firago', sans-serif ;
+    margin-bottom: 1rem;
+}
+
+.blog-photo-and-text-wrapper {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    z-index: -1;
+    display: flex;
+    gap: 2rem;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    
+}
+
+.blog-photo-and-text-wrapper p {
+    color: #202020;
+    font-size: 1.8rem;
+    font-weight: 400;
+    font-family: 'firago', sans-serif ;
+
+}
+
+.blog-photo-and-text-wrapper p span {
+    text-decoration: underline;
+    font-weight: 600;
+}
+.fileInput {
+    display: none;
+}
+
+.validation-error {
+    color: red;
+}
+
+
+
+input {
+    width: 100%;
+    border: none;
+    outline: none;
+    border-radius: 8px;
+    font-size: 1.8rem;
+    padding: 1.2rem 1.8rem;
+
+}
+
+input:focus {
+    border: 1px solid #5D37F3;
+}
+
+input.ng-invalid.ng-touched{
+    border: red 1px solid;
+    background-color: rgb(253, 242, 242);
+}
+input.ng-valid.ng-touched{
+    border: rgb(99, 216, 99) 1px solid;
+    background-color: rgb(207, 228, 207);
+}
