--- a/src/app/input/input.component.css
+++ b/src/app/input/input.component.css
@@ -2,12 +2,15 @@
 
 
 
-.validation-error {
+.validation-error, .validation-success {
     color: red;
     font-size: 1.4rem;
     font-family: 'firago', sans-serif ;
     font-weight: 500;
     
+}
+.validation-success {
+    color: rgb(99, 216, 99);
 }
 
 input {
@@ -19,4 +22,24 @@ input {
     padding: 1.2rem 1.8rem;
 
 }
+
+input:focus {
+    border: 1px solid #5D37F3;
+}
+
+input.ng-invalid.ng-touched{
+    border: red 1px solid;
+    background-color: rgb(253, 242, 242);
+}
+
+
+
+input.ng-valid.ng-touched{
+    border: rgb(99, 216, 99) 1px solid;
+    background-color: rgb(207, 228, 207);
+}
+
+
+
+
 
