--- a/src/app/topics/topic-card/topic-card.component.css
+++ b/src/app/topics/topic-card/topic-card.component.css
@@ -1,12 +1,15 @@
 
 .topic-card-wrapper {
-    min-width: 10rem;
+    width: 20rem;
+    height: 5rem;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
 .topic-card-btn {
+    width: 100%;
+    height: 100%;
     font-size: 1.6rem;
     border-radius: 100px;
     border: none;
