--- a/src/app/topics/topic-list/topic-list.component.css
+++ b/src/app/topics/topic-list/topic-list.component.css
@@ -1,15 +1,15 @@
 .topic-list {
-    width: 100%;
+    width: 60%;
     overflow-x: auto;
     margin-top: 9.6rem;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 3rem;
 }
 
 .topic-list-inner {
     width: 50%;
     display: flex;
     gap: 3rem;
-    padding-left: 12rem;
-    padding-right: 12rem;
-    /* margin: 0 auto; */
 
 }
