--- a/src/styles.css
+++ b/src/styles.css
@@ -7,6 +7,7 @@ SPACING SYSTEM (px)
 FONT SIZE SYSTEM (px)
 10 / 12 / 14 / 16 / 18 / 20 / 24 / 30 / 36 / 44 / 52 / 62 / 74 / 86 / 98
 */
+@import "~@ng-select/ng-select/themes/default.theme.css";
 
 * {
     margin: 0;
