--- a/src/app/shared/custom-dropdown/custom-dropdown.component.html
+++ b/src/app/shared/custom-dropdown/custom-dropdown.component.html
@@ -31,6 +31,7 @@
         [Category]="categ"
         [background_color]="categ.text_color"
         [text_color]="categ.background_color"
+        [inDifferentSizes]="true"
         (selectCategoryEmitter)="addCategory($event)"
     >
     </app-custom-dropdown-btn>
