--- a/src/app/blogs/blog-card/blog-card.component.css
+++ b/src/app/blogs/blog-card/blog-card.component.css
@@ -1,79 +1,68 @@
 
-:host{
-    width: 31rem;
-}
-
-
-.blog-img {
+.blog {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start; /* Center the content horizontally */
+    text-align: center; /* Center the text content */
+  }
+  .blog-img-wrapper {
+    width: 100%;
+  }
+  
+  .blog-img {
     object-fit: cover;
     width: 100%;
-    height: 90%;
+    height: 100%; /* Adjust this value if needed */
     object-position: center;
     border-radius: 5px;
-}
-
-.author-and-date {
+  }
+  
+  .author-and-date {
     margin-top: 2.4rem;
     display: flex;
     gap: 6px;
     flex-direction: column;
-}
+  }
 
-.blog-author {
-    font-size: 1.8rem;
-    font-family: 'firago', sans-serif ;
-    color: #1A1A1F;
-    font-weight: 400;
-}
-
-.blog-pubDate {
-    font-size: 1.4rem;
-    font-family: 'firago', sans-serif ;
-    color: #a1a1a1;
-}
-
-.title-and-topics {
-    margin-top: 1.6rem;
-    display: flex;
-    flex-direction: column;
-}
-
-.blog-title {
+  .title-and-topics {
+    width: 100%;
+  }
+  
+  .blog-title {
+    text-align: left;
     font-size: 2.4rem;
     color: #1A1A1F;
-    font-family: 'firago', sans-serif ;
+    font-family: 'firago', sans-serif;
     font-weight: 500;
-}
+    margin-top: 1.6rem;
+  }
 
-.blogflex {
-
-    display: flex;
+  .blogflex {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(120px, 1fr)); /* Adjust minimum and maximum width as needed */
+    gap: 10px; /* Adjust the gap between grid items as needed */
     align-items: center;
-    justify-content: space-between;
+    justify-content: flex-start;
 }
-
-.blog-description {
+  
+  .blog-description {
     margin-top: 1.6rem;
     color: #686868;
-    font-family: 'firago', sans-serif ;
+    font-family: 'firago', sans-serif;
     font-size: 1.4rem;
-}
-
-
-.see-more {
+  }
+  
+  .see-more {
     border: none;
     outline: none;
     background-color: transparent;
     margin-top: 1.6rem;
     color: #5D37F3;
     font-size: 1.6rem;
-    font-family: 'firago', sans-serif ;
-
-}
-
-.rotate-symbol {
+    font-family: 'firago', sans-serif;
+  }
+  
+  .rotate-symbol {
     display: inline-block;
     transform: rotate(45deg);
-}
-
-
+  }
