--- a/src/app/blogs/blog-list/blog-list.component.css
+++ b/src/app/blogs/blog-list/blog-list.component.css
@@ -3,9 +3,13 @@
 
 .blogs-wrapper {
     display: grid;
-    grid-template-columns: repeat(3,1fr);
+    grid-template-columns: repeat(3, 1fr);
+    align-content: center;
+    justify-content: center;
     gap: 3.2rem;
     margin-top: 9.6rem;
-    padding: 8rem;
+    margin-left: auto;
+    margin-right: auto;
+    width: 144rem;
 
 }
