--- a/src/app/modal/modal.component.html
+++ b/src/app/modal/modal.component.html
@@ -7,7 +7,7 @@
             <div class="modal-from-content" >
                 <app-heading 
                 [headingText]="'შესვლა'"
-                [headingStyle]="'heading-md'"></app-heading>
+                [headingStyle]="'heading-md '"></app-heading>
                 <form id="loginForm" [formGroup]="loginForm" (ngSubmit)="login()" class="modal-form">
                     <span>ელ-ფოსტა</span>
                     <app-input 
@@ -36,7 +36,7 @@
                 </div>
                 <app-heading 
                 [headingText]="'წარმატებული ავტორიზაცია'"
-                [headingStyle]="'heading-sm margin-bottom-lg'"></app-heading>
+                [headingStyle]="'heading-sm text-center margin-bottom-lg'"></app-heading>
             </div>
             <app-generic-btn
                 [btnText]="'კარგი'"
