--- a/src/app/success-modal/success-modal.component.html
+++ b/src/app/success-modal/success-modal.component.html
@@ -10,8 +10,8 @@
                 <img class="success-symbol" src="../../assets/tick-circle.png" alt="okstatus"/>
             </div>
             <app-heading 
-            [headingText]="'წარმატებული ავტორიზაცია'"
-            [headingStyle]="'heading-sm margin-bottom-lg'"></app-heading>
+            [headingText]="'ჩანაწერი წარმატებით დაემატა'"
+            [headingStyle]="'heading-sm text-center margin-bottom-lg'"></app-heading>
         </div>
         <app-generic-btn
             [btnText]="'კარგი'"
