--- a/src/app/blogs/blog-card/blog-card.component.css
+++ b/src/app/blogs/blog-card/blog-card.component.css
@@ -5,49 +5,26 @@
     align-items: flex-start; /* Center the content horizontally */
     text-align: center; /* Center the text content */
   }
-  .blog-img-wrapper {
-    width: 100%;
-  }
   
-  .blog-img {
-    object-fit: cover;
-    width: 100%;
-    height: 100%; /* Adjust this value if needed */
-    object-position: center;
-    border-radius: 5px;
-  }
-  
-  .author-and-date {
-    margin-top: 2.4rem;
-    display: flex;
-    gap: 6px;
-    flex-direction: column;
-  }
 
   .title-and-topics {
     width: 100%;
   }
   
-  .blog-title {
-    text-align: left;
-    font-size: 2.4rem;
-    color: #1A1A1F;
-    font-family: 'firago', sans-serif;
-    font-weight: 500;
-    margin-top: 1.6rem;
-  }
 
   .blogflex {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(120px, 1fr)); /* Adjust minimum and maximum width as needed */
+    margin-top: 1.8rem;
+    display: flex;
+    flex-wrap: wrap;
     gap: 10px; /* Adjust the gap between grid items as needed */
     align-items: center;
     justify-content: flex-start;
 }
   
   .blog-description {
+    text-align: left;
     margin-top: 1.6rem;
-    color: #686868;
+    color: #4d4d4e;
     font-family: 'firago', sans-serif;
     font-size: 1.4rem;
   }
@@ -60,6 +37,7 @@
     color: #5D37F3;
     font-size: 1.6rem;
     font-family: 'firago', sans-serif;
+    cursor: pointer;
   }
   
   .rotate-symbol {
