--- a/src/app/blogs/blog-list/blog-list.component.css
+++ b/src/app/blogs/blog-list/blog-list.component.css
@@ -3,13 +3,16 @@
 
 .blogs-wrapper {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(3,minmax(36rem,1fr));
     align-content: center;
     justify-content: center;
-    gap: 3.2rem;
+    row-gap: 4.8rem;
+    column-gap: 3.2rem;
     margin-top: 9.6rem;
     margin-left: auto;
     margin-right: auto;
     width: 144rem;
+
+    padding-bottom: 4.8rem;
 
 }
