--- a/src/app/input/input.component.html
+++ b/src/app/input/input.component.html
@@ -8,7 +8,7 @@
         </p>
     </ng-container>
 
-    <ng-container *ngIf="control.touched && control.dirty">
+    <ng-container *ngIf="control.touched ">
         <!-- email validation -->
         <p class="validation-error" 
             *ngIf="control.errors?.['pattern'] || (control.errors?.['email'] && !customEmailValidator)">
