--- a/src/app/shared/heading/heading.component.css
+++ b/src/app/shared/heading/heading.component.css
@@ -17,20 +17,15 @@
 
 .heading-md {
     font-size: 3rem;
-    font-weight: 500;
-    text-align: center;
 }
 
 .heading-sm {
-    font-size: 2.4rem;
-    font-weight: 500;
-    text-align: center;
+    font-size: 1.8rem;
     
 }
 
 .heading-extra-sm {
-    font-size: 1.8rem;
-    font-weight: 500;
+    font-size: 1.4rem;
     
 }
 
@@ -42,6 +37,43 @@
     font-weight: 700;
 }
 
+.font-mid {
+    font-weight: 500;
+}
+
+.font-light {
+    font-weight: 300;
+}
+
 .margin-bottom-lg {
     margin-bottom: 3.2rem;
+}
+
+.publish-date {
+    color: #4d4d4e;
+}
+
+.mg-top-lg {
+    margin-top: 3.2rem;
+}
+
+.mg-top-sm {
+    margin-top: 1.6rem;
+
+}
+
+.margin-right-md {
+    margin-right: 1.8rem;
+}
+
+.text-left {
+    text-align: left;
+}
+
+.oneline {
+    display: inline-block;
+}
+
+.text-center {
+    text-align: center;
 }
