--- a/src/app/topics/topic-card/topic-card.component.css
+++ b/src/app/topics/topic-card/topic-card.component.css
@@ -4,12 +4,12 @@
     height: 5rem;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
 }
 
 .topic-card-btn {
-    width: 60%;
-    height: 60%;
+    width: 70%;
+    height: 70%;
     font-size: 1.2rem;
     border-radius: 100px;
     border: none;
